Updated the Old English translation.

--- a/po/wesnoth-editor/ang.po
+++ b/po/wesnoth-editor/ang.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-08 18:12+0100\n"
-"PO-Revision-Date: 2011-11-30 16:06-0500\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
+"PO-Revision-Date: 2012-05-24 12:01-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
@@ -50,7 +50,7 @@ msgstr "ᚹᚫᛏᛖᚱ"
 #. [editor_group]: id=flat
 #: data/core/editor/terrain-groups.cfg:23
 msgid "flat"
-msgstr ""
+msgstr "ᚠᛁᛚᛞ"
 
 #. [editor_group]: id=desert
 #: data/core/editor/terrain-groups.cfg:30
@@ -95,7 +95,7 @@ msgstr "ᚦᚩᚱᛈ"
 #. [editor_group]: id=castle
 #: data/core/editor/terrain-groups.cfg:86
 msgid "castle"
-msgstr ""
+msgstr "ᛒᚢᚱᚷ"
 
 #. [editor_group]: id=bridge
 #: data/core/editor/terrain-groups.cfg:93
@@ -150,12 +150,12 @@ msgstr ""
 #. [menu]: id=menu-editor-edit
 #: data/themes/editor.cfg:133
 msgid "Edit"
-msgstr ""
+msgstr "ᚪᛞᛁᚻᛏᚪᚾ"
 
 #. [menu]: id=menu-editor-map
 #: data/themes/editor.cfg:143
 msgid "Map"
-msgstr ""
+msgstr "ᛚᚪᚾᛞᚳᚪᚱᛏᛖ"
 
 #. [menu]: id=menu-editor-window
 #: data/themes/editor.cfg:153
@@ -169,7 +169,7 @@ msgstr "ᚦᚩᚱᛈᚪᛋ"
 
 #: src/editor/editor_controller.cpp:132
 msgid "Quit Editor"
-msgstr ""
+msgstr "ᚪᛞᛁᚻᛏᛖᚾᛞ ᛚᚫᚠᚪᚾ"
 
 #: src/editor/editor_controller.cpp:286
 msgid "Fatal error"
@@ -177,7 +177,7 @@ msgstr ""
 
 #: src/editor/editor_controller.cpp:311 src/editor/editor_controller.cpp:1098
 msgid "(New Map)"
-msgstr ""
+msgstr "(ᚾᛁᚹᚢ ᛚᚪᚾᛞᚳᚪᚱᛏᛖ)"
 
 #: src/editor/editor_controller.cpp:317
 msgid "Do you really want to quit?"
