--- a/po/wesnoth-help/ang@latin.po
+++ b/po/wesnoth-help/ang@latin.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-05-18 19:22+1200\n"
-"Last-Translator: Zetan R S <axonfifty@gmail.comm>\n"
+"PO-Revision-Date: 2012-05-27 04:15-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
 "MIME-Version: 1.0\n"
@@ -871,7 +871,6 @@ msgstr ""
 #. [section]: id=terrains
 #. [topic]: id=..terrains
 #: data/core/help.cfg:63 data/core/help.cfg:482
-#, fuzzy
 msgid "Terrains"
 msgstr "Land"
 
@@ -1218,7 +1217,7 @@ msgstr ""
 #. [topic]: id=shroud_and_fog
 #: data/core/help.cfg:218
 msgid "Shroud and Fog of War"
-msgstr ""
+msgstr "Deorcness and Ƿiges Mist"
 
 #. [topic]: id=shroud_and_fog
 #: data/core/help.cfg:221
@@ -2038,7 +2037,6 @@ msgstr ""
 
 #. [topic]: id=terrain_flat
 #: data/core/help.cfg:492
-#, fuzzy
 msgid "Flat"
 msgstr "Fild"
 
@@ -3024,7 +3022,6 @@ msgstr ""
 
 #. [petrifies]: id=petrifies
 #: data/core/macros/abilities.cfg:643
-#, fuzzy
 msgid "petrifies"
 msgstr "forstanaþ"
 
@@ -4338,7 +4335,7 @@ msgstr ""
 
 #: src/help.cpp:1344
 msgid "level"
-msgstr ""
+msgstr "mæþ"
 
 #: src/help.cpp:1376
 msgid "Advances from: "
@@ -4425,7 +4422,6 @@ msgid "Terrain Modifiers"
 msgstr ""
 
 #: src/help.cpp:1574
-#, fuzzy
 msgid "Terrain"
 msgstr "Land"
 
@@ -4458,7 +4454,6 @@ msgid "corrupted original file"
 msgstr ""
 
 #: src/help.cpp:3157
-#, fuzzy
 msgid "Close"
 msgstr "Tynan"
 
