--- a/po/wesnoth-lib/ang.po
+++ b/po/wesnoth-lib/ang.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-05-18 06:14-0500\n"
+"PO-Revision-Date: 2012-08-15 12:54-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
@@ -817,12 +817,12 @@ msgstr "ᛞᚹᛇᚱᚷᛁᛋᚳ ᚦᚩᚱᛈ"
 #. [terrain_type]: id=hut_village
 #: data/core/terrain.cfg:1412
 msgid "Hut"
-msgstr ""
+msgstr "ᚻᚢᛚᚳ"
 
 #. [terrain_type]: id=hut_snow_village
 #: data/core/terrain.cfg:1425
 msgid "Snowy Hut"
-msgstr ""
+msgstr "ᛋᚾᚪᚹᛁᚷ ᚻᚢᛚᚳ"
 
 #. [terrain_type]: id=logcabin_village
 #: data/core/terrain.cfg:1438
@@ -1115,7 +1115,7 @@ msgstr ""
 #. [terrain_type]: id=shroud
 #: data/core/terrain.cfg:2066 data/gui/default/window/mp_create_game.cfg:479
 msgid "Shroud"
-msgstr ""
+msgstr "ᛞᛇᚱᚳᚾᛖᛋᛋ"
 
 #. [terrain_type]: id=fog
 #: data/core/terrain.cfg:2075
@@ -1124,7 +1124,6 @@ msgstr "ᛗᛁᛋᛏ"
 
 #. [terrain_type]: id=flat
 #: data/core/terrain.cfg:2116
-#, fuzzy
 msgid "Flat"
 msgstr "ᚠᛁᛚᛞ"
 
@@ -1156,7 +1155,7 @@ msgstr ""
 #: data/gui/default/window/message.cfg:133 src/construct_dialog.cpp:134
 #: src/mapgen_dialog.cpp:110 src/preferences_display.cpp:272
 msgid "Close"
-msgstr ""
+msgstr "ᛏᚣᚾᚪᚾ"
 
 #. [label]
 #. [column]
@@ -1269,7 +1268,7 @@ msgstr "ᚾᚪᚾᚪ"
 #. [label]
 #: data/gui/default/window/addon_uninstall_list.cfg:51
 msgid "Uninstall Add-ons"
-msgstr ""
+msgstr "ᚫᛏᛠᚳᚪᚾ ᚢᚾᚩᚾᛋᛏᛖᛚᛚᚪᚾ"
 
 #. [scroll_label]
 #: data/gui/default/window/addon_uninstall_list.cfg:70
@@ -1336,7 +1335,7 @@ msgstr ""
 #. [label]
 #: data/gui/default/window/chat_log.cfg:56
 msgid "Page:"
-msgstr ""
+msgstr "ᛏᚱᚪᛗᛖᚾᛏ:"
 
 #. [slider]: id=page_number
 #: data/gui/default/window/chat_log.cfg:69
@@ -1427,12 +1426,11 @@ msgstr ""
 #. [label]
 #: data/gui/default/window/editor_generate_map.cfg:35
 msgid "Generate Random Map"
-msgstr ""
+msgstr "ᚷᛖᛚᛁᛗᛈᛚᛁᚳᚢ ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᚳᛁᚾᚾᚪᚾ"
 
 #. [button]: id=next_generator
 #: data/gui/default/window/editor_generate_map.cfg:64
 #: data/gui/default/window/editor_generate_map.cfg:65
-#, fuzzy
 msgid "Next Generator"
 msgstr "ᚾᛁᛖᚻᛋᛏ ᚳᛁᚾᚾᛖᚾᛞ"
 
@@ -1523,7 +1521,6 @@ msgstr ""
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [label]
 #: data/gui/default/window/editor_settings.cfg:35 src/hotkeys.cpp:124
-#, fuzzy
 msgid "Editor Settings"
 msgstr "ᚪᛞᛁᚻᛏᛖᚾᛞᛖᛋ ᚳᚩᛋᛏᚪᛋ"
 
@@ -2007,8 +2004,9 @@ msgstr ""
 #. [button]: id=kick
 #: data/gui/default/window/lobby_player_info.cfg:168
 #: data/gui/default/window/mp_cmd_wrapper.cfg:389
+#, fuzzy
 msgid "Kick"
-msgstr ""
+msgstr "ᚢᛏᛋᛈᚩᚱᚾᛖᛏᛏᚪᚾ"
 
 #. [label]
 #: data/gui/default/window/lobby_player_info.cfg:175
@@ -2017,8 +2015,9 @@ msgstr ""
 
 #. [button]: id=kick_ban
 #: data/gui/default/window/lobby_player_info.cfg:188
+#, fuzzy
 msgid "Kick/ban"
-msgstr ""
+msgstr "ᚢᛏᛋᛈᚩᚱᚾᛖᛏᛏᚪᚾ/ᚠᚩᚱᛋᛖᚾᛞᚪᚾ"
 
 #. [label]: id=side_title
 #: data/gui/default/window/mp_change_control.cfg:21
@@ -2087,8 +2086,9 @@ msgstr ""
 
 #. [button]: id=ban
 #: data/gui/default/window/mp_cmd_wrapper.cfg:404
+#, fuzzy
 msgid "Ban"
-msgstr ""
+msgstr "ᚠᚩᚱᛋᛖᚾᛞᚪᚾ"
 
 #. [label]
 #: data/gui/default/window/mp_connect.cfg:60
@@ -2336,7 +2336,7 @@ msgstr ""
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:227
 msgid "Add-ons"
-msgstr ""
+msgstr "ᚫᛏᛠᚳᚪᚾ"
 
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:227
@@ -2345,14 +2345,14 @@ msgstr ""
 
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:228
-#, fuzzy
 msgid "Map Editor"
 msgstr "ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᚪᛞᛁᚻᛏᛖᚾᛞ"
 
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:228
+#, fuzzy
 msgid "Start the map editor"
-msgstr ""
+msgstr "ᚦᚩᚾᛖ ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᚪᛞᛁᚻᛏᛖᚾᛞ ᛋᛏᚣᚱᛏᚪᚾ"
 
 #. [grid]
 #: data/gui/default/window/title_screen.cfg:229
@@ -2561,7 +2561,7 @@ msgstr ""
 
 #: src/game_preferences_display.cpp:202
 msgid "Theme"
-msgstr ""
+msgstr "ᚪᚾᛞᛏᛁᛗᛒᛖᚱ"
 
 #: src/game_preferences_display.cpp:203
 msgid "Hotkeys"
@@ -2898,7 +2898,7 @@ msgstr ""
 
 #: src/game_preferences_display.cpp:1292
 msgid "Choose Theme"
-msgstr ""
+msgstr "ᚪᚾᛞᛏᛁᛗᛒᛖᚱ ᚳᛇᛋᚪᚾ"
 
 #: src/game_preferences_display.cpp:1307
 msgid "New theme will take effect on next new or loaded game."
@@ -3164,9 +3164,8 @@ msgid "Animate Map"
 msgstr ""
 
 #: src/hotkeys.cpp:56
-#, fuzzy
 msgid "Next Unit"
-msgstr "ᚾᛁᛖᚻᛋᛏᚢ ᚹᛁᚻᛏ"
+msgstr "ᚾᛁᛖᚻᛋᛏ ᚹᛁᚻᛏ"
 
 #: src/hotkeys.cpp:57
 msgid "Previous Unit"
@@ -3341,7 +3340,6 @@ msgid "Next Side"
 msgstr ""
 
 #: src/hotkeys.cpp:106
-#, fuzzy
 msgid "Full Map"
 msgstr "ᚠᚢᛚᛚᚢ ᛚᚪᚾᛞᚳᚪᚱᛏᛖ"
 
@@ -3390,7 +3388,6 @@ msgid "Quit to Desktop"
 msgstr ""
 
 #: src/hotkeys.cpp:122
-#, fuzzy
 msgid "Close Map"
 msgstr "ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᛏᚣᚾᚪᚾ"
 
@@ -3427,21 +3424,20 @@ msgid "Swap Foreground/Background Terrains"
 msgstr ""
 
 #: src/hotkeys.cpp:135
-#, fuzzy
 msgid "Next Tool"
 msgstr "ᚾᛁᛖᚻᛋᛏ ᛏᚩᛚ"
 
 #: src/hotkeys.cpp:136
 msgid "Paint Tool"
-msgstr ""
+msgstr "ᛗᛖᛏᛁᛝᛏᚩᛚ"
 
 #: src/hotkeys.cpp:137
 msgid "Fill Tool"
-msgstr ""
+msgstr "ᚠᚣᛚᛚᛁᛝᛏᚩᛚ"
 
 #: src/hotkeys.cpp:138
 msgid "Selection Tool"
-msgstr ""
+msgstr "ᚳᛇᛋᚢᛝᛏᚩᛚ"
 
 #: src/hotkeys.cpp:140
 msgid "Set Starting Positions Tool"
@@ -3456,7 +3452,6 @@ msgid "Default Brush"
 msgstr ""
 
 #: src/hotkeys.cpp:143
-#, fuzzy
 msgid "Cut"
 msgstr "ᚢᛏᛋᚾᛁᚦᚪᚾ"
 
@@ -3477,8 +3472,9 @@ msgid "Select All"
 msgstr "ᛠᛚᛚ ᚳᛇᛋᚪᚾ"
 
 #: src/hotkeys.cpp:150
+#, fuzzy
 msgid "Select Inverse"
-msgstr ""
+msgstr "ᚳᛇᛋᚢᛝᛖ ᚩᚾᚻᚹᛁᚱᚠᚪᚾ"
 
 #: src/hotkeys.cpp:152
 msgid "Select None"
@@ -3501,7 +3497,6 @@ msgid "Flip Clipboard Vertically"
 msgstr ""
 
 #: src/hotkeys.cpp:162
-#, fuzzy
 msgid "Rotate Selection"
 msgstr "ᚳᛇᛋᚢᛝᛖ ᛏᚢᚱᚾᛁᚪᚾ"
 
@@ -3510,20 +3505,19 @@ msgid "Flip Selection"
 msgstr ""
 
 #: src/hotkeys.cpp:166
-#, fuzzy
 msgid "Fill Selection"
 msgstr "ᚳᛇᛋᚢᛝᛖ ᚠᚣᛚᛚᚪᚾ"
 
 #: src/hotkeys.cpp:168
+#, fuzzy
 msgid "Generate Tiles In Selection"
-msgstr ""
+msgstr "ᛏᛁᚷᛖᛚᚪᚾ ᚩᚾ ᚳᛇᛋᚢᛝᛖ ᚳᛁᚾᚾᚪᚾ"
 
 #: src/hotkeys.cpp:170
 msgid "Randomize Tiles In Selection"
 msgstr ""
 
 #: src/hotkeys.cpp:174
-#, fuzzy
 msgid "Rotate Map"
 msgstr "ᛚᚪᚾᛞᚳᚪᚱᛏᚪᚾ ᛏᚢᚱᚾᛁᚪᚾ"
 
@@ -3636,7 +3630,6 @@ msgid "Manage Add-ons"
 msgstr ""
 
 #: src/hotkeys.cpp:262
-#, fuzzy
 msgid "Start Editor"
 msgstr "ᚪᛞᛁᚻᛏᛖᚾᛞ ᛋᛏᚣᚱᛏᚪᚾ"
 
@@ -3675,7 +3668,6 @@ msgid "language code for localized resources^en_US"
 msgstr "ang"
 
 #: src/mapgen_dialog.cpp:113
-#, fuzzy
 msgid "Map Generator"
 msgstr "ᛚᚪᚾᛞᚳᚪᚱᛏᚳᛁᚾᚾᛖᚾᛞ"
 
