--- a/po/wesnoth-manual/ang@latin.po
+++ b/po/wesnoth-manual/ang@latin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-08 18:11+0100\n"
-"PO-Revision-Date: 2012-05-17 09:20-0500\n"
+"PO-Revision-Date: 2012-08-15 12:31-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
@@ -278,7 +278,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #: /src/wesnoth/doc/manual/manual.en.xml:163
 msgid "Add-ons"
-msgstr ""
+msgstr "Æteacan"
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:167
@@ -292,7 +292,6 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #: /src/wesnoth/doc/manual/manual.en.xml:177
-#, fuzzy
 msgid "Map Editor"
 msgstr "Landcartan Adihtend"
 
@@ -1185,7 +1184,7 @@ msgstr "Ctrl+n"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:865
 msgid "Rename unit"
-msgstr "Ƿihta eftnemnan"
+msgstr "Ƿihte eftnemnan"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:870
@@ -1791,17 +1790,17 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><table><tgroup><thead><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1407
 msgid "Lawful"
-msgstr ""
+msgstr "Dæglic"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><thead><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1410
 msgid "Chaotic"
-msgstr ""
+msgstr "Nihtlic"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><thead><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1413
 msgid "Liminal"
-msgstr ""
+msgstr "Glomlic"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1420
